--- a/kid-school/style.css
+++ b/kid-school/style.css
@@ -52,6 +52,29 @@ nav ul {
     list-style: none;
     padding: 0;
     margin: 0;
+    background-color: #007bff;
     display: flex;
     justify-content: center;
+}
+nav li {
+    margin: 0 1ren;
+}
+nav a {
+    color: #007bff;
+    text-decoration: none;
+}
+footer {
+    background-color: #007bff;
+    color: #fff;
+    text-align: center;
+    padding: 1rem 0;
+}
+@media (max-width:768px){
+    nav ul {
+        flex-direction: column;
+        text-align: center;
+    }
+    nav li {
+        margin: 0.5rem;
+    }
 }
